--- a/Visit/app/src/main/res/layout/fragment_main.xml
+++ b/Visit/app/src/main/res/layout/fragment_main.xml
@@ -12,5 +12,11 @@
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/testBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="touch"
+        android:layout_below="@id/section_label"/>
 
 </RelativeLayout>
