--- a/Visit/app/src/main/res/layout/fragment_face_id.xml
+++ b/Visit/app/src/main/res/layout/fragment_face_id.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sonu_pc.visit.FaceIdFragment">
+    tools:context="com.example.sonu_pc.visit.fragments.FaceIdFragment">
 
 
     <ImageButton
@@ -25,7 +25,7 @@
         android:layout_height="225dp"
         android:layout_gravity="center"
         android:keepScreenOn="true"
-        app:cameraFacing="back"
+        app:cameraFacing="front"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
