--- a/Visit/app/src/main/res/layout/activity_master.xml
+++ b/Visit/app/src/main/res/layout/activity_master.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraint_layout_master"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sonu_pc.visit.MasterActivity">
+    tools:context="com.example.sonu_pc.visit.activities.MasterActivity">
 
     <FrameLayout
         android:id="@+id/container_fragment"
