--- a/Visit/app/src/main/res/layout/activity_qr_sacnner.xml
+++ b/Visit/app/src/main/res/layout/activity_qr_sacnner.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sonu_pc.visit.QrScanner">
+    tools:context="com.example.sonu_pc.visit.activities.QrScanner">
 
     <com.dlazaro66.qrcodereaderview.QRCodeReaderView
         android:id="@+id/qrdecoderview"
