--- a/Visit/app/src/main/res/layout/fragment_visitee_info.xml
+++ b/Visit/app/src/main/res/layout/fragment_visitee_info.xml
@@ -3,29 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sonu_pc.visit.VisiteeInfoFragment">
+    tools:context="com.example.sonu_pc.visit.fragments.VisiteeInfoFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/editText_stay_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="39dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="22dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginEnd="39dp"
-        android:layout_marginTop="22dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText6"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText6"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/editText6"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/editText_visit_purpose"
+        app:layout_constraintRight_toRightOf="@+id/editText_visit_purpose"
+        app:layout_constraintTop_toBottomOf="@+id/editText_visit_purpose"
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/editText_visitee_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -45,19 +44,18 @@
         app:layout_constraintVertical_bias="0.24000001" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/editText_visit_purpose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="17dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
-        android:layout_marginTop="17dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText5"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/editText5"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText5"
-        app:layout_constraintHorizontal_bias="1.0" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="@+id/editText_visitee_name"
+        app:layout_constraintRight_toRightOf="@+id/editText_visitee_name"
+        app:layout_constraintTop_toBottomOf="@+id/editText_visitee_name" />
 
     <Button
         android:id="@+id/button_next"
@@ -85,8 +83,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/visiteeInfo_visitee_name"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText5"
-        app:layout_constraintRight_toLeftOf="@+id/editText5"
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText_visitee_name"
+        app:layout_constraintRight_toLeftOf="@+id/editText_visitee_name"
         android:layout_marginRight="8dp" />
 
     <TextView
@@ -96,7 +94,7 @@
         android:text="@string/visiteeInfo_purpose"
         android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="@+id/textView6"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText6" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText_visit_purpose" />
 
     <TextView
         android:id="@+id/textView9"
@@ -105,5 +103,5 @@
         android:text="@string/visiteeInfo_hours"
         android:layout_marginRight="1dp"
         app:layout_constraintRight_toRightOf="@+id/textView8"
-        app:layout_constraintBaseline_toBaselineOf="@+id/editText4" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/editText_stay_time" />
 </android.support.constraint.ConstraintLayout>
