1) Changed the logo from apple to spectrum coaching. 2) Removed select button from options dialog 3) Improved the app opening ux

--- a/Visit/app/src/main/res/layout/fragment_visitor_info.xml
+++ b/Visit/app/src/main/res/layout/fragment_visitor_info.xml
@@ -17,7 +17,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_apple_logo_black" />
+        app:srcCompat="@drawable/spectrum_5" />
+
 
     <EditText
         android:id="@+id/editText1"
