--- a/Visit/app/src/main/res/layout/activity_setup.xml
+++ b/Visit/app/src/main/res/layout/activity_setup.xml
@@ -7,4 +7,28 @@
     android:layout_height="match_parent"
     tools:context="com.example.sonu_pc.visit.activities.SetupActivity">
 
+    <ImageView
+        android:id="@+id/brand_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="374dp"
+        android:transitionName="@string/logo_transition_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/spectrum_5" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="72dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/brand_logo" />
+
+
 </android.support.constraint.ConstraintLayout>
