--- a/Visit/app/src/main/res/layout/fragment_survey.xml
+++ b/Visit/app/src/main/res/layout/fragment_survey.xml
@@ -18,7 +18,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_apple_logo_black" />
+        app:srcCompat="@drawable/spectrum_5" />
 
     <EditText
         android:id="@+id/editText1"
@@ -82,7 +82,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorAccent"
-        android:text="NEXT"
+        android:text="SUBMIT"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
