--- a/Visit/app/src/main/res/layout/fragment_thank_you.xml
+++ b/Visit/app/src/main/res/layout/fragment_thank_you.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:text="Thanks For Visiting"
+        android:text="Thank You"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -26,12 +26,13 @@
         android:layout_height="329dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/ic_apple_logo_black"
+        android:src="@drawable/spectrum_5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.265" />
+        app:layout_constraintVertical_bias="0.265"
+        android:transitionName="@string/logo_transition_name"/>
 
 </android.support.constraint.ConstraintLayout>
