1) Added new Preferences and Data Models, giving more flexibility in terms of number and order of screens. Issues: 1) The key of the map storing the data recorded from the screens is the title of the screen. Thus screens with matching titles will have a conflict and thus would lose data on the firebase server.

--- a/Visit/app/src/main/res/xml/preferences.xml
+++ b/Visit/app/src/main/res/xml/preferences.xml
@@ -2,27 +2,27 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
       <PreferenceCategory
-        android:title="@string/pref_category_stage_sel"
+        android:type="@string/pref_category_stage_sel"
         android:key="pref_key_stages_select">
         <CheckBoxPreference
             android:key="@string/pref_key_stage1"
-            android:title="@string/pref_stage1"
+            android:type="@string/pref_stage1"
             android:defaultValue="true"/>
         <CheckBoxPreference
             android:key="@string/pref_key_stage2"
-            android:title="@string/pref_stage2"
+            android:type="@string/pref_stage2"
             android:defaultValue="true" />
         <CheckBoxPreference
             android:key="@string/pref_key_stage3"
-            android:title="@string/pref_stage3"
+            android:type="@string/pref_stage3"
             android:defaultValue="true" />
           <CheckBoxPreference
               android:key="@string/pref_key_stage4"
-              android:title="@string/pref_stage4"
+              android:type="@string/pref_stage4"
               android:defaultValue="true" />
           <CheckBoxPreference
               android:key="@string/pref_key_stage5"
-              android:title="@string/pref_stage5"
+              android:type="@string/pref_stage5"
               android:defaultValue="true" />
     </PreferenceCategory>
 
