--- a/Visit/app/src/main/res/layout/fragment_main.xml
+++ b/Visit/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.sonu_pc.visit.activities.MainActivity$PlaceholderFragment">
+    tools:context="com.example.sonu_pc.visit.activities.PrinterActivity$PlaceholderFragment">
 
     <TextView
         android:id="@+id/section_label"
