--- a/Visit/app/src/main/res/layout/fragment_thank_you.xml
+++ b/Visit/app/src/main/res/layout/fragment_thank_you.xml
@@ -8,7 +8,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView_thank_you"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
