--- a/Visit/app/src/main/res/layout/fragment_id_scan.xml
+++ b/Visit/app/src/main/res/layout/fragment_id_scan.xml
@@ -9,19 +9,19 @@
 
     <com.otaliastudios.cameraview.CameraView
         android:id="@+id/camera"
-        android:layout_width="400dp"
-        android:layout_height="400dp"
+        android:layout_width="306dp"
+        android:layout_height="379dp"
         android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/view_rounded_corner"
         android:keepScreenOn="true"
         app:cameraFacing="front"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageButton_camera"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton_camera" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.767" />
 
     <ImageButton
         android:id="@+id/imageButton_camera"
@@ -34,4 +34,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp" />
+
+    <TextView
+        android:id="@+id/tv_camera_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="36dp"
+        android:text="Your camera hint goes here"
+        app:layout_constraintBottom_toTopOf="@+id/camera"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.29" />
 </android.support.constraint.ConstraintLayout>
