--- a/Visit/app/src/main/res/layout/fragment_thank_you.xml
+++ b/Visit/app/src/main/res/layout/fragment_thank_you.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="8dp"
         android:text="Thank You"
         android:textSize="32sp"
+        android:transitionName="@string/logo_transition_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
