--- a/Visit/app/src/main/res/layout/fragment_welcome.xml
+++ b/Visit/app/src/main/res/layout/fragment_welcome.xml
@@ -8,15 +8,15 @@
 
     <ImageView
         android:id="@+id/iv_brand_logo"
-        android:layout_width="259dp"
-        android:layout_height="329dp"
+        android:layout_width="307dp"
+        android:layout_height="339dp"
+        android:transitionName="@string/logo_transition_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.29"
-        app:srcCompat="@drawable/spectrum_5"
-        android:transitionName="@string/logo_transition_name"/>
+        app:srcCompat="@drawable/spectrum_5" />
 
     <Button
         android:id="@+id/button1"
@@ -43,7 +43,7 @@
         android:layout_marginTop="8dp"
         android:text="Been Here Before"
         android:textColor="@color/colorAccent"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
