1) Added SignOut Activity and fragments. 2) Modified the PreferencesModel to identify the workflow intended for signOut. TODO: 1) Copy the changes in the VisitPreference App and the website.

--- a/Visit/app/src/main/res/layout-w400dp/fragment_welcome.xml
+++ b/Visit/app/src/main/res/layout-w400dp/fragment_welcome.xml
@@ -42,11 +42,15 @@
         style="@android:style/Widget.Material.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:text="Been Here Before"
         android:textColor="@color/colorAccent"
-        android:visibility="gone"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="427dp" />
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button2"
