--- a/Visit/app/src/main/res/menu/menu_main.xml
+++ b/Visit/app/src/main/res/menu/menu_main.xml
@@ -2,9 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.sonu_pc.visit.activities.printer.PrinterActivity">
-    <item
+    <!--<item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:type="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
+
+    <item android:id="@+id/action_search"
+        android:title="Search here.."
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always" />
 </menu>
