1) Changed dialog to add select button. 2) Added Cancel button. 3) Removed microphone icon. 4) Sign Out button will now appear on Welcome fragment only if some workflow is a signout workflow.

--- a/Visit/app/src/main/res/layout-sw600dp/fragment_welcome.xml
+++ b/Visit/app/src/main/res/layout-sw600dp/fragment_welcome.xml
@@ -75,7 +75,7 @@
         android:layout_marginTop="8dp"
         android:text="Been Here Before"
         android:textColor="@color/colorAccent"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
