--- a/Visit/app/src/main/res/layout/activity_setup.xml
+++ b/Visit/app/src/main/res/layout/activity_setup.xml
@@ -9,7 +9,7 @@
 
     <ImageView
         android:id="@+id/brand_logo"
-        android:layout_width="wrap_content"
+        android:layout_width="360dp"
         android:layout_height="374dp"
         android:transitionName="@string/logo_transition_name"
         app:layout_constraintBottom_toBottomOf="parent"
